--- a/web-site/accordion_1.css
+++ b/web-site/accordion_1.css
@@ -1,17 +1,22 @@
 html, body {
-
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 .panel-faq.container {
-
+    margin-bottom: -10px;
 }
 
 .panel-faq-title {
-
+    color: #00EAEA;
+    cursor: pointer;
 }
 
 .panel-faq-answer {
-
+    /*padding: 15px;
+      display: none;*/
+      /*height: 0px;
+      overflow: hidden; */
 }
 
 #btn-all-close:hover {
