--- a/web-site/accordion_1.css
+++ b/web-site/accordion_1.css
@@ -20,6 +20,7 @@ html, body {
       height: 0px;
       overflow: hidden;
       /*변화가 시작되는 쪽에서 애니메이션 이펙트를 붙여줘야 함*/
+      transition: all 0.35s;
 }
 
 #btn-all-close {
